--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 :root {
     --bg-color: #fdfeff;
-    --second-bg-color: #dac7da;
+    --second-bg-color: #e5a0e5;
     --text-color: #111010;
     --main-color: #0ef;
 
